force-app/main/default/objects/Exam_Question__c/Exam_Question__c.object-meta.xml
<CustomObject>
    <description>Questions that appear in exams</description>
    <label>Exam Question</label>
    <nameField>
        <displayFormat>QID-{0000000}</displayFormat>
        <label>Question Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Exam Questions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>