force-app/main/default/objects/Exam_Question__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Question is Active ir Inactive</description>
    <inlineHelpText>Question is Active ir Inactive?</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>