force-app/main/default/objects/Exam_Question__c/fields/CD_Staff_Solution__c.field-meta.xml
<CustomField>
    <fullName>CD_Staff_Solution__c</fullName>
    <description>The correct answer to the question of quick reference to location in manuals</description>
    <inlineHelpText>The correct answer to the question of quick reference to the answer in manuals</inlineHelpText>
    <label>CD/Staff Solution</label>
    <length>5000</length>
    <type>Html</type>
</CustomField>