force-app/main/default/objects/Exam_Question__c/fields/Exam__c.field-meta.xml
<CustomField>
    <fullName>Exam__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Exam to which this question is linked</description>
    <inlineHelpText>Exam to which this question is linked</inlineHelpText>
    <label>Exam</label>
    <referenceTo>Exam__c</referenceTo>
    <relationshipLabel>Exam Questions</relationshipLabel>
    <relationshipName>Exam_Questions</relationshipName>
    <type>Lookup</type>
</CustomField>