force-app/main/default/objects/Exam_Question__c/fields/Exam_Name_Text__c.field-meta.xml
<CustomField>
    <fullName>Exam_Name_Text__c</fullName>
    <formula>Exam__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Exam Name (Text)</label>
    <type>Text</type>
</CustomField>