force-app/main/default/objects/Exam_Question__c/fields/Exam_Question_Count__c.field-meta.xml
<CustomField>
    <fullName>Exam_Question_Count__c</fullName>
    <description>Number of questions in the chosen exam</description>
    <formula>Exam__r.Number_of_Questions__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Exam Question Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>