force-app/main/default/objects/Exam_Question__c/fields/Exam_Section__c.field-meta.xml
<CustomField>
    <fullName>Exam_Section__c</fullName>
    <description>Exam section</description>
    <label>Exam Section (Theory Only)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Physics</fullName>
            </value>
            <value>
                <fullName>Physiology</fullName>
            </value>
            <value>
                <fullName>RDP</fullName>
            </value>
            <value>
                <fullName>Skills &amp; Environment</fullName>
            </value>
            <value>
                <fullName>Equipment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>