force-app/main/default/objects/Exam_Question__c/fields/Exam_Type__c.field-meta.xml
<CustomField>
    <fullName>Exam_Type__c</fullName>
    <formula>TEXT( Exam__r.Type__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Exam Type</label>
    <type>Text</type>
</CustomField>