force-app/main/default/objects/Exam_Question__c/fields/Question__c.field-meta.xml
<CustomField>
    <fullName>Question__c</fullName>
    <description>Number of the question in the exam</description>
    <label>Question #</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>