force-app/main/default/objects/Exam_Question__c/fields/Question_Category__c.field-meta.xml
<CustomField>
    <fullName>Question_Category__c</fullName>
    <description>Category of the exam question</description>
    <inlineHelpText>Category for question.e.g. Physics: Displacement, Boyles Law; Physiology: Hypothermia, Lungs, etc.</inlineHelpText>
    <label>Question Category</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Exam_Section__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Boyles Law</fullName>
            </value>
            <value>
                <fullName>Displacement</fullName>
            </value>
            <value>
                <fullName>Henry&apos;s Law</fullName>
            </value>
            <value>
                <fullName>Refraction</fullName>
            </value>
            <value>
                <fullName>Sound</fullName>
            </value>
            <value>
                <fullName>Density</fullName>
            </value>
            <value>
                <fullName>Partial Pressure</fullName>
            </value>
            <value>
                <fullName>Conduction</fullName>
            </value>
            <value>
                <fullName>Convection</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>