force-app/main/default/objects/Exam_Question__c/fields/Question_Text__c.field-meta.xml
<CustomField>
    <fullName>Question_Text__c</fullName>
    <description>Full text of the question - including answer options</description>
    <label>Question Text</label>
    <length>5120</length>
    <type>Html</type>
</CustomField>