force-app/main/default/objects/Exam_Question__c/fields/Random__c.field-meta.xml
<CustomField>
    <fullName>Random__c</fullName>
    <formula>VALUE(SUBSTITUTE(LEFT(RIGHT(TEXT(AutoNumber__c * AutoNumber__c * AutoNumber__c * (NOW() -  $System.OriginDateTime)),5),5),&quot;0&quot;,&quot;1&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Random</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>