force-app/main/default/objects/Exam_Question__c/validationRules/Check_for_Answer.validationRule-meta.xml
<ValidationRule>
    <fullName>Check_for_Answer</fullName>
    <active>true</active>
    <description>Does the question have an answer</description>
    <errorConditionFormula>ISBLANK( TEXT( Correct_Answer__c ) )</errorConditionFormula>
    <errorDisplayField>Correct_Answer__c</errorDisplayField>
    <errorMessage>You must set an &quot;Answer&quot; for this question!</errorMessage>
</ValidationRule>