force-app/main/default/objects/Exam_Question__c/validationRules/Must_have_a_Section.validationRule-meta.xml
<ValidationRule>
    <fullName>Must_have_a_Section</fullName>
    <active>true</active>
    <description>Exam question must have a section entered</description>
    <errorConditionFormula>AND(
ISBLANK( TEXT(Exam_Section__c) ), IF(Exam_Type__c = &quot;Theory&quot;, true, false)
)</errorConditionFormula>
    <errorDisplayField>Exam_Section__c</errorDisplayField>
    <errorMessage>You must set a exam section (e.g. Physics, Physiology, etc.) for this exam question</errorMessage>
</ValidationRule>