force-app/main/default/objects/Exam_Question__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Active__c</columns>
    <columns>Correct_Answer__c</columns>
    <columns>Exam__c</columns>
    <columns>Exam_Type__c</columns>
    <columns>Question_Text__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>